--- a/1.html
+++ b/1.html
@@ -41,7 +41,7 @@
 			
 		<div class="abt-div">
 			<h1 class="container1-h1" >About Us</h1>
-			<p class="abt-p1">It is a long established fact that a reader will br distracted</p>
+			<p class="abt-p1">It is was long established fact that a reader will br distracted</p>
 			<p><b>A sentence is a group of words that are put together</b>.A sentence is the basic unit of language which expressed.A sentence is a group of words that are put together.A sentence is the basic unit of language which expressed.</p>
 			<p><b>A sentence is a group of words that are put together</b>.A sentence is the basic unit of language which expressed.A sentence is a group of words that are put together.A sentence is the basic unit of language which expressed.</p>
 			<ul class="abtul1" >
