--- a/practice.html
+++ b/practice.html
@@ -18,7 +18,7 @@
 <div class="mySlides fade">
   <!-- <div class="numbertext">2 / 3</div> -->
   <img src="user3.png" >
-  <div class="text">A sentence is a group of words that are put together.A sentence is the basic unit of language which expressed.A sentence is a group of words that are put together.A sentence is the basic unit of language which expressed.<br><br>-Rahul2</div>
+  <div class="text">A sentence is a group of words and alphabet that are put together.A sentence is the basic unit of language which expressed.A sentence is a group of words that are put together.A sentence is the basic unit of language which expressed.<br><br>-Rahul2</div>
 </div>
 
 <div class="mySlides fade">
